src/test/pass/minimal.j
class Main {
    Void main() {
        return;
    }
}
