src/test/fail/duplicate_methods.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Void a() {
        return;
    }

    Void a() {
        return;
    }
}
